# Junk-Warehouse

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  compose.yml  help.md  package-lock.json  package.json  requirements.txt
backend/: .env.example  __init__.py  pyproject.toml
backend/app/: __init__.py  assoc_helper.py  config_loader.py  contaiment_path.py  containment_path.py  db.py  embeddings.py  errors.py  helpers.py  history.py  image_handler.py  imagehandler.py  invoice_handlers.py  items.py  job_manager.py  logging_setup.py  main.py  maint.py  metatext.py  search.py  search_expression.py  slugify.py  static_server.py  tree_browse.py  trim_img_border.py  user_login.py
backend/automation/: __init__.py  actor_context.py  ai_helpers.py  gmail_proc.py  html_dom_finder.py  html_invoice_helpers.py  order_num_extract.py  web_get.py
backend/email/: email_helper.py  gmail.py  imap.py
backend/email_utils/: __init__.py  email_helper.py  gmail.py  imap.py
backend/schemas/: schema.sql
backend/services/: maintenance.py  merge_helpers.py
backend/shop_handler/: __init__.py  amazon_handler.py  digikey_api.py  digikey_handler.py  ebay_handler.py  mcmastercarr_handler.py  shop_handler.py
backend/shop_handler/examples/: amazon.eml  amazon_web.mhtml  digikey_email.mhtml  digikey_web.mhtml  mcmaster.eml  mcmaster_web.mhtml
backend/tools/: __init__.py  ai_test_query.py  backup.py  batch_items_importer.py  csv_template_generator.py  db_describe.py  starting_container_layout_importer.py  user_generate.py
config/: .gitignore  appconfig.json  (+3 more)
(+73 files in other folders)
