[tool.poetry]
name = "your-backend"
version = "0.1.0"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0"
flask-cors = "^4.0"
sqlalchemy = "^2.0"
psycopg = {version="^3.1", extras=["binary"]}
alembic = "^1.13"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
ruff = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
